--- a/src/se/kth/inda17/style.css
+++ b/src/se/kth/inda17/style.css
@@ -1,5 +1,5 @@
 #pane {
-    -fx-background-image: url("background.png");
+    -fx-background-image: url("../../../../resources/images/background.png");
     -fx-background-repeat: stretch;
     -fx-background-size: 300 275;
     -fx-background-position: center center;
