--- a/src/se/kth/inda17/style.css
+++ b/src/se/kth/inda17/style.css
@@ -44,3 +44,10 @@
     -fx-text-fill: #DD0453;
     -fx-font-weight: bold;
 }
+
+#grade {
+    -fx-font-size: 20;
+    -fx-font-family: "Courier New";
+    -fx-text-fill: #DD0453;
+    -fx-font-weight: bold;
+}
